# school_management

./: .gitignore  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/apps/: __init__.py
src/apps/attendance/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/core/: admin.py  auth_backend.py  context_processors.py  forms.py  models.py  s3_signed_storage.py  urls.py  utils.py  views.py
src/apps/finance/: admin.py  models.py  urls.py  views.py
src/apps/office/: admin.py  models.py
src/apps/sales/: admin.py  models.py
src/apps/staff/: admin.py  models.py
src/apps/students/: admin.py  forms.py  models.py  urls.py  views.py
src/school_management_backend/: settings.py  urls.py
src/templates/: base.html
src/templates/attendance/: attendance_already_taken.html  attendance_error.html  attendance_success.html  bulk_attendance.html  class_selection.html
src/templates/core/: add_family_member.html  family_discount.html  family_form.html  family_list.html  generate_fee_dues.html  home.html  login.html  signup.html  user_document_upload.html  user_profile.html  user_profile_photo_update.html  user_profile_update.html  wallet_topup.html
src/templates/finance/: family_payment_dates.html  family_payment_details.html
src/templates/registration/: login.html  signup.html
src/templates/students/: add_fee_type.html  admission_form.html  admission_list.html  admission_print.html  admission_printout.html  board_academic_details_form.html  board_academic_details_list.html  bulk_promote.html  crosslist_class_select.html  download_students_list.html  download_students_list_format.html  exam_course_subject_setup.html  family_fee_dues.html  fee_structure_form.html  (+17 more)
static/css/: print.css  styles.css
(+60 files in other folders)
